--- a/Chat/Main.storyboard
+++ b/Chat/Main.storyboard
@@ -232,13 +232,13 @@
 								<fontDescription key="fontDescription" type="system" pointSize="14"/>
 								<textInputTraits key="textInputTraits"/>
 							</textField>  <!--this one is message text-->
-							<button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center"
+							<!--<button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center"
 								buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="95">
 								<rect key="frame" x="-100" y="75" width="46" height="30"/>
 								<autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
 								<color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
 								<state key="normal" title="Send"/>
-							</button> 	<!--Send button -->
+							</button> 	--><!--Send button -->
 
 						
 							<textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural"
@@ -279,6 +279,7 @@
 						<outlet property="textSend" destination="94" id="name-outlet-94"/>
 						<outlet property="VideoStart" destination="5" id="name-outlet-5"/>
 						<outlet property="AudioStart" destination="6" id="name-outlet-6"/>
+						<outlet property="VedioView" destination="99" id="name-outlet-61"/>
 						<!--<outlet property="labelMode" destination="102" id="name-outlet-102"/>-->
 
 						<!--<outlet property="labelPhone" destination="2pY-Y6-xif" id="hah-mq-LoU"/>-->
